# redis_tui

./: README.md  pyproject.toml  requirements.txt  run.py  setup.py
docs/api_references/: textual_reference.md
src/: __init__.py  app.py
src/components/: __init__.py  data_display.py
src/data/: __init__.py  redis_client.py  sample_data.py
src/redis_tui/: app.py  samples.py
src/redis_tui/components/: data_display.py  key_tree.py
src/redis_tui/data/: redis_client.py  sample_data.py
tests/: test_data_display.py  test_key_tree.py  test_redis_client.py
